# poisson_disk_sampling

./: LICENSE  README.md  pyproject.toml
src/poisson_disk_sampling/: PoissonDiskSampling.py  example.py
